Use dash-style for configuration properties to align it with command line

--- a/bugzilla-backend/src/main/resources/application.conf
+++ b/bugzilla-backend/src/main/resources/application.conf
@@ -6,8 +6,8 @@ github {
   # Prefer GITHUB_TOKEN environment variable instead
   # token = "..."
   organization = "vlsi"
-  attachmentsRepository = "tmp-jmeter-attachments"
-  issuesRepository = "tmp-jmeter-issues"
+  attachments-repository = "tmp-jmeter-attachments"
+  issues-repository = "tmp-jmeter-issues"
 }
 bugzilla {
   url = "https://bz.apache.org/bugzilla/"
