use --bugzilla-product instead of --product flag

--- a/bugzilla-backend/src/main/resources/application.conf
+++ b/bugzilla-backend/src/main/resources/application.conf
@@ -11,6 +11,7 @@ github {
 }
 bugzilla {
   url = "https://bz.apache.org/bugzilla/"
+  product = "JMeter"
   database {
     name = "bugzilla"
     username = "root"
