Replace https://issues.apache.org/bugzilla/ to GitHub issues
fixes #7

--- a/bugzilla-backend/src/main/resources/application.conf
+++ b/bugzilla-backend/src/main/resources/application.conf
@@ -11,6 +11,9 @@ github {
 }
 bugzilla {
   url = "https://bz.apache.org/bugzilla/"
+  alternative-url: [
+    "https://issues.apache.org/bugzilla/",
+  ]
   product = "JMeter"
   database {
     name = "bugzilla"
