Link users to their GitHub profiles
fixes #3

--- a/bugzilla-backend/src/main/resources/application.conf
+++ b/bugzilla-backend/src/main/resources/application.conf
@@ -27,3 +27,11 @@ bugzilla {
     # url = "jdbc:mysql://localhost:3306/bugzilla"
   }
 }
+converter-settings {
+  users: {
+    include "github_profiles.conf"
+  }
+  milestone-renames {
+
+  }
+}
