Import milestones and assign imported bugs to milestones
fixes #2

--- a/bugzilla-backend/src/main/resources/application.conf
+++ b/bugzilla-backend/src/main/resources/application.conf
@@ -8,6 +8,7 @@ github {
   organization = "vlsi"
   attachments-repository = "tmp-jmeter-attachments"
   issues-repository = "tmp-jmeter-issues"
+  delay-between-api-calls = 1s
 }
 bugzilla {
   url = "https://bz.apache.org/bugzilla/"
@@ -28,10 +29,11 @@ bugzilla {
   }
 }
 converter-settings {
-  users: {
+  users {
     include "github_profiles.conf"
   }
-  milestone-renames {
-
+  milestone-rename {
+    regex = "JMETER.(.*+)"
+    replacement = "$1"
   }
 }
